--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "nodejs-socket",
   "version": "1.0.0",
   "description": "simple chat app with nodejs and socket",
+  "engines": {
+    "node": "16.14.2"
+  },
   "main": "index.js",
   "type": "module",
   "scripts": {
