--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
   "license": "ISC",
   "dependencies": {
     "@koa/cors": "^3.3.0",
+    "config": "^3.3.7",
+    "generate-username": "^1.0.3",
     "koa": "^2.13.4",
     "koa-ejs": "^4.3.0",
     "koa-mount": "^4.0.0",
     "koa-router": "^10.1.1",
     "koa-static": "^5.0.0",
+    "mongoose": "5.13.8",
     "path": "^0.12.7",
-    "socket.io": "^4.5.0"
+    "socket.io": "4.5.0"
   }
 }
