--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "koa-mount": "^4.0.0",
     "koa-router": "^10.1.1",
     "koa-static": "^5.0.0",
+    "lodash": "^4.17.21",
     "mongoose": "5.13.8",
     "path": "^0.12.7",
     "socket.io": "4.5.0"
