--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@koa/cors": "^3.3.0",
     "config": "^3.3.7",
+    "fluent-ffmpeg": "^2.1.2",
     "generate-username": "^1.0.3",
     "koa": "^2.13.4",
     "koa-ejs": "^4.3.0",
